--- a/index.html
+++ b/index.html
@@ -112,58 +112,59 @@
 
         <!--Reserve a table form-->
         <div class="row row-content align-items-center">
-            <div class="card offset-sm-2">
-                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>            
-                <div class="card-body">
-                    <a name="reserveTable"></a>
-                    <form>
-                        <div class="form-group row">
-                            <label for="numguests" class="col-form-label col-sm-3">Number of Guests</label>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n1Radio" id="n1Radio" value="1">
-                                <label class="form-check-label" for="n1Radio">1</label>                             
+            <div class="col-12 col-sm-8 offset-sm-2 align-self-center">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="reserveTable">
+                            <div class="form-group row">
+                                <label for="feedback" class="col-sm-2 col-form-label">Number of guests</label>
+                                <div class="col-12 col-sm-6">
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline1">1</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">2</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">3</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline4" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">4</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline5" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">5</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline6" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">6</label>
+                                    </div>
+                                </div>    
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n2Radio" id="n2Radio" value="2">
-                                <label class="form-check-label" for="n2Radio">2</label>
+                            <div class="form-group row">
+                                <label for="date" class="col-sm-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-sm-3">
+                                    <input type="tel" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-sm-3">
+                                    <input type="tel" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n3Radio" id="n3Radio" value="3">
-                                <label class="form-check-label" for="n3Radio">3</label>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n4Radio" id="n4Radio" value="4">
-                                <label class="form-check-label" for="n4Radio">4</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n5Radio" id="n5Radio" value="5">
-                                <label class="form-check-label" for="n5Radio">5</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="n6Radio" id="n6Radio" value="6">
-                                <label class="form-check-label" for="n6Radio">6</label>
-                            </div>
-                        </div>
-                
-                        <div class="form-group row">
-                            <label for="reserveDateTime" class="col-form-label col-sm-2">Date and Time</label>
-                            <div class="col-sm-3">
-                                <input type="text" class="form-control" id="reserveDate" name="reserveDate" placeholder="Date">
-                            </div>
-                            <div class="col-sm-3">
-                                <input type="text" class="form-control" id="reserveTime" name="reserveTime" placeholder="Time">
-                            </div>
-                        </div>
-                
-                        <div class="form-group row offset-sm-2">
-                            <div>
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </div>
+            </div>    
+        </div>        
     </div>
 
     <footer class="footer">
