--- a/aboutus.html
+++ b/aboutus.html
@@ -162,12 +162,12 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="albertohead">
                             <h3 class="mb-0">
-                                <a data-toggle="collapse" data-target="#albertohead">
+                                <a data-toggle="collapse" data-target="#alberto">
                                     Alberto Somayya <small>Executive Chef</small>
                                 </a>
                             </h3>
                         </div>
-                        <div class="collapse" id="albertohead" data-parent="#accordion">
+                        <div class="collapse" id="alberto" data-parent="#accordion">
                             <div class="card-body">
                                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience
                                     having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering
