--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
-                </span>                
+                </span>
             </div>
         </div>
     </nav>
@@ -68,13 +68,93 @@
                         </div>
                         <div class="form-row">
                             <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
+
+    <div id="reserveTableModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="reserveTable">
+                        <div class="form-group row">
+                            <label for="feedback" class="col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-sm-6">
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline1" name="numGuestRadios" class="form-check-input" value="1" checked>
+                                    <label class="form-check-label" for="customRadioInline1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline2" name="numGuestRadios" class="form-check-input" value="2">
+                                    <label class="form-check-label" for="customRadioInline2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline3" name="numGuestRadios" class="form-check-input" value="3">
+                                    <label class="form-check-label" for="customRadioInline3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline4" name="numGuestRadios" class="form-check-input" value="4">
+                                    <label class="form-check-label" for="customRadioInline4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline5" name="numGuestRadios" class="form-check-input" value="5">
+                                    <label class="form-check-label" for="customRadioInline5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="customRadioInline6" name="numGuestRadios" class="form-check-input" value="6">
+                                    <label class="form-check-label" for="customRadioInline6">6</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="smokePref" class="col-sm-2 col-form-label">Section</label>
+                            <div class="col-12 col-sm-8">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group">
+                                    <label class="btn btn-success btn-toggle active">
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                      </label>
+                                      <label class="btn btn-danger btn-toggle">
+                                        <input type="radio" name="options" id="option2" autocomplete="off">Smoking
+                                      </label>
+                                    <!-- <button type="button" class="btn btn-success">Non-Smoking</button>
+                                    <button type="button" class="btn btn-danger">Smoking</button> -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label for="date" class="col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-12 col-sm-3">
+                                <input type="tel" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-12 col-sm-3">
+                                <input type="tel" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -87,11 +167,10 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <a role="button" class="btn btn-warning btn-sm btn-block nav-link"
-                        data-toggle="tooltip" data-html="true" 
-                        title="Or Call us at <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveTable">
+                        data-toggle="modal"
+                        href="#reserveTableModal">
                         Reserve Table
-                    </a>                    
+                    </a>
                 </div>
             </div>
         </div>
@@ -111,7 +190,7 @@
                                 </h2>
                                 <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza,
                                     topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo
-                                    Paneer.</p>                                
+                                    Paneer.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -123,8 +202,8 @@
                                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six
                                     enticing appetizers,
                                     six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                                    person </p>                                
-                            </div>                            
+                                    person </p>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
@@ -179,7 +258,7 @@
             </div>
             <div class="col col-sm order-sm-last col-md">
                 <div class="media">
-                    
+
                     <div class="media-body">
                         <h2>Weekend Grand Buffet
                             <span class="badge badge-danger">NEW</span>
@@ -188,7 +267,7 @@
                             enticing appetizers,
                             six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
                             person </p>
-                
+
                     </div>
                     <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
                 </div>
@@ -205,74 +284,17 @@
                         src="img/alberto.png" alt="alberto">
                         <div class="media-body">
                             <h2>Alberto Somayya</h2>
-                            <h4>Executive Chef</h4>                            
-                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>                            
+                            <h4>Executive Chef</h4>
+                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                         </div>
                 </div>
             </div>
-        </div>        
-
-
-        <!--Reserve a table form-->
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-8 offset-sm-2 align-self-center">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form id="reserveTable">
-                            <div class="form-group row">
-                                <label for="feedback" class="col-sm-2 col-form-label">Number of guests</label>
-                                <div class="col-12 col-sm-6">
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline1">1</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">2</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">3</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline4" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">4</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline5" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">5</label>
-                                    </div>
-                                    <div class="custom-control custom-radio custom-control-inline">
-                                        <input type="radio" id="customRadioInline6" name="customRadioInline1" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadioInline2">6</label>
-                                    </div>
-                                </div>    
-                            </div>
-                            <div class="form-group row">
-                                <label for="date" class="col-sm-2 col-form-label">Date and Time</label>
-                                <div class="col-12 col-sm-3">
-                                    <input type="tel" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-12 col-sm-3">
-                                    <input type="tel" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>    
-        </div>        
+        </div>
     </div>
 
     <footer class="footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -304,7 +326,7 @@
                     </div>
                 </div>
            </div>
-           <div class="row justify-content-center">             
+           <div class="row justify-content-center">
                 <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
@@ -315,11 +337,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
