--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <!-- <a data-toggle="modal" data-target="#loginModal">-->
+                    <a id="loginLink">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -146,7 +147,7 @@
                         <div class="form-group row">
                             <div class="offset-md-2 col-md-10">
                                 <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>
                             </div>
                         </div>
                     </form>
@@ -166,9 +167,8 @@
                         <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-warning btn-sm btn-block nav-link"
-                        data-toggle="modal"
-                        href="#reserveTableModal">
+                    <!--<a role="button" class="btn btn-warning btn-sm btn-block nav-link" data-toggle="modal" data-target="#reserveTableModal">-->
+                    <a id="reserveTableButton" role="button" class="btn btn-warning btn-sm btn-block nav-link">
                         Reserve Table
                     </a>
                 </div>
@@ -228,7 +228,7 @@
                         <span class="carousel-control-next-icon"></span>
                     </a>
                     <button class="btn btn-danger btn-sm" id="carouselButton">
-                        <span id="carousel-button-icon class="fa fa-pause"></span>
+                        <span id="carousel-button-icon" class="fa fa-pause"></span>
                     </button>
                 </div>
             </div>
@@ -348,6 +348,7 @@
     <script>
         $(document).ready(function() {
             $('#mycarousel').carousel( { interval: 2000 } );
+            
             $('#carouselButton').click(function() {
                 if($('#carouselButton').children('span').hasClass('fa-pause')) {
                     $('#mycarousel').carousel('pause');
@@ -360,6 +361,14 @@
                     $('#carouselButton').children('span').addClass('fa-pause');
                 }
             });
+            $('#loginLink').click(function(){
+                $('#loginModal').modal('toggle');
+            });
+
+            $('#reserveTableButton').click(function() {
+                $('#reserveTableModal').modal('toggle');
+            });
+
         });
     </script>
 </body>
